<resources>
    <string name="app_name">AsturiasEnRuta</string>
    <string name="title_activity_main_rutas">MainRutas</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_rutas">Rutas</string>
    <string name="menu_gallery">Imágenes</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_config">Configuración</string>
    <string name="menu_share">Compartir</string>
    <string name="menu_send">Enviar</string>
</resources>
